css/sol.css
/*
 * Style tweaks
 * --------------------------------------------------
 */

 html {
  /* Always show the scroll bar */
  overflow: -moz-scrollbars-vertical;
  overflow-y: scroll;
 }

html,
body {
  overflow-x: hidden; /* Prevent scroll on narrow devices */
}
body {
  padding-top: 70px;
  background-color: #E6E7E8;
  font-family: 'proxima-nova', serif;
  font-size: 0.9rem;
}

.tag{
  font-weight: 600;
  font-size: 0.9rem;
}

p {
  font-size: 0.9rem;
}

h4 {
  font-weight: 600;
  font-size: 1.1rem;
}

h5 {
  font-size: 1.1rem;
}
h6{
  font-size: 1rem;
}

a, a:hover, a:active, a:focus, button, button:hover, button:active, button:focus {
   outline: 0;
   text-decoration: none;
}

button:disabled {
    cursor:not-allowed;
}

a {
  color: #373a3c;
}
a:hover{
  color: #555;
}


footer {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.hidden {
  display: none;
}

.collapsing{
  display: inline-block;
}

.padding-0{
  padding-left: 0px !important;
  padding-right: 0px !important;
}

.padding-md{
  padding-left: 6px !important;
  padding-right: 6px !important;
}

/* ------- Header ------- */

.bg-colored {
  background-color: #C92D2D;
}

@media (max-width: 767px) {
  .navbar {
    margin-right: -15px;
    margin-left: -15px;
  }
}

.navbar-brand {
  font-family: 'Cinzel', serif;
  font-size: 17px;
  text-transform: lowercase;
  text-align: center;
  height: auto;
  line-height: 0.9;
  display:inline-block;
  float:none;
  margin-right: 0px;
}

.icon-button{
  cursor: pointer;
  position: relative;
  background-color: transparent;
  font-family: 'Simple-Line-Icons';
  font-size: 1.4em;
  line-height: 0%;
  text-align: center;
  border: none;
  padding: 9px 0;
}

.icon-button-disabled{
  visibility: hidden;
  cursor: default;
}

.icon-button:hover{
  opacity: .8;
}

.icon-navbar{
  margin: 0 10px;
  color: #FFF;
}

.icon-footer{
  margin: 0 10px;
  color: #373a3c;
}

.icon-homepage{
  font-size: 2em;
  color: #C92D2D;
}

.icon-tag {
  color: #FFF;
  padding-left: 5px;
  font-size: 12px;
}

.icon-side {
  margin-right: 10px;
  font-size: 1.1em;
  color: #C92D2D;
  vertical-align: middle;
}

@media (max-width: 992px) {
  .icon-side {
    margin: 0 8px;
  }
}

.col-nopadding {
  padding-right: 7px;
  padding-left: 7px;
}
.col-nopadding-left {
  padding-left: 15px;
  padding-right: 7px;
}
.col-nopadding-right {
  padding-left: 7px;
  padding-right: 15px;
}

@media (min-width: 991px) {

  .col-nopadding-side {
    padding-left: 0;
  }

}

.icon-control{
  cursor: pointer;
  position: relative;
  color: #373a3c;
  background-color: transparent;
  font-family: 'Simple-Line-Icons';
  font-size: 0.8em;
  line-height: 0%;
  text-align: center;
  border: none;
  margin: 0 0px;
  padding: 5px 8px;
  opacity: .6;
}

.icon-control:hover{
  opacity: 1;
}

.icon-control:last-of-type{
  margin-right: -8px;
}

@media (max-width: 991px) {
  .icon-button{
    margin: 0;
  }

  .list-group-item {
    padding: .75rem 0.65rem;
    border-left: none;
    border-right: none;
  }

  .card .list-group:first-child .list-group-item:first-child {
    border-top: none;
  }

  .card .list-group:last-child .list-group-item:last-child {
      border-bottom: none;
  }

}

@media (max-width: 991px) {
  .resize, .table-course, .mobile-view{
    display:none;
  }
  /*home*/
  .icon-homepage{
    font-size: 1.5em;
    color: #C92D2D;
  }

  .card-block{
     padding: 0.6rem;
  }
}

.card-top {
  display: inline-block;
  margin: 0px;
}

.card-content {
  margin-top: 20px;
}

.card-title, .card-text{
  text-align: center;
}

.card-title{
  margin-top: 10px;
}

.card-side{
  font-size: 1.1rem;
  vertical-align: middle;
  padding-top: 0.8rem;
  padding-bottom: 0.8rem;
}

.card-side-container{
  position: relative;
}

@media (max-width: 767px) {
  .card-title{
    font-size: 0.9rem;
    margin-top: 6px;
  }
}

.profile-user {
  text-align: center;
}

.profile-active {
  background-color: #8DC63F;
}

.profile-picture {
  position: relative;
  display: inline-block;
  overflow: hidden;
  -webkit-transition: opacity .25s ease-in-out;
  transition: opacity .25s ease-in-out;
  margin-bottom: 20px;
}

.profile-picture:hover {
  opacity: .5;
}

.profile-picture img {
  width: 150px;
  height: 150px;
}

.profile-picture:hover form {
    opacity: 1;
    top: 0;
}

.profile-picture:hover span {
    top: 50%;
    position: absolute;
    left: 0;
    right: 0;
    cursor: pointer;
    -webkit-transform: translateY(-50%);
            transform: translateY(-50%);
}

.profile-picture form {
    display: block;
    position: absolute;
    top: -100%;
    opacity: 0;
    left: 0;
    bottom: 0;
    right: 0;
    text-align: center;
}

@media screen and (max-width: 767px) {
  .profile-picture {
    margin: 10px;
  }
  .profile-picture img {
    width: 100px;
    height: 100px;
  }
}

.section-title{
  text-indent: 20px;
  margin-bottom: 20px;
  margin-top: 20px;
}

.rotate{
  display:inline-block;
  -webkit-transition: transform 0.2s linear;
  -webkit-transition: -webkit-transform 0.2s linear;
  transition: -webkit-transform 0.2s linear;
  transition: transform 0.2s linear;
  transition: transform 0.2s linear, -webkit-transform 0.2s linear;
  cursor: pointer!important;
}

.rotate.down{
  display:inline-block;
  -webkit-transform:rotate(180deg);
  transform:rotate(180deg);
}

/* PLAN */

.breadcrumb {
  background-color: transparent;
  border-radius: .0em;
  margin-bottom: 0.75rem;
  padding: .45rem;
}

.breadcrumb-item {
  color:#373a3c;
}

.breadcrumb-item:hover, .breadcrumb-item:focus {
  color:#373a3c;
  opacity: .6;
  text-decoration: none;
}

.breadcrumb-item.active:hover {
  color:#818a91;
  opacity: 1;
  text-decoration: none;
}

label.custom-control.custom-checkbox {
  margin-bottom: .0rem;
  margin-top: .0rem;
  border-top: none;
  border-bottom: none;
}

.table-subject {
  width: 40%;
}

/*
 * Off Canvas
 * --------------------------------------------------
 */

.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}

.row-offcanvas {
  position: relative;
  -webkit-transition: all .25s ease-out;
         transition: all .25s ease-out;
}

.sidebar-offcanvas {
  display:none;
  position: absolute;
}

.row-offcanvas.left {
  -webkit-transform:translateX(50%);
         transform:translateX(50%);
}

.row-offcanvas.left
.sidebar-left {
  position: relative;
  left: -50%;
}

.row-offcanvas.left .main-offcanvas {
  left: 150%;
}

.row-offcanvas.right {
  -webkit-transform:translateX(-50%);
         transform:translateX(-50%);
}

.row-offcanvas.right
.sidebar-right {
  position: relative;
  right: -50%;
}

.row-offcanvas.right .main-offcanvas {
  right: 150%;
}

.notransition {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}

/*
 * Off Canvas
 * --------------------------------------------------
 */

.monthly-header-title, .monthly-header-title a:link, .monthly-header-title a:visited, .monthly-day-title-wrap div {
  font-size: 0.8rem;
}

.monthly-day-event > .monthly-day-number {
  font-size: inherit;
  margin: 3%;
}

.monthly-day-title-wrap {
  padding: 6px 0;
}

.monthly-day-event {
  padding-top: 1.2rem;
}

.monthly-day {
  font-weight: normal;
}

.monthly-day .monthly-event-indicator {
  font-size: 0.8rem;
  margin: 3.5%;
  border-radius: 6px;
  text-shadow: none;
}

/* LOGIN */

.centered-card {
  margin-left: auto;
  margin-right: auto;
}

.grey-card {
  background-color: transparent;
}

.grey-card .card-block {
   padding: 7px;
 }

 .login-card .card-block {
   padding: 7%;
 }

.login-card .card-text {
  margin-top:0rem;
  margin-bottom:1.6rem;
}

.login-card-title {
  text-align: center;
  font-size: 1.6rem;
}

.login-card-subtitle {
  text-align: center;
  font-size: 1rem;
  padding-bottom: 15px;
}

.btn-login {
  margin-top: 20px;
  margin-bottom: 0px;
  min-height: 45px;
}

.no-padding {
  margin-bottom: 0px;
  margin-bottom: 0px;
}

.custom-control-description {
  font-size: 1rem;
}

@media screen and (min-width: 991px) {
  .centered-card {
     max-width: 40%;
   }
}

/* FORM ICONS */

.left-inner-addon input {
  padding-left: 35px;
}

.left-inner-addon i {
  position: absolute;
  padding: 11px 12px;
  pointer-events: none;
  font-size: 1rem;
  color: #818a91;
}

/* PLAN ERROR */

.big-grey-icon {
  margin-left: auto;
  margin-right: auto;
  font-size: 30px;
  display: table;
  margin-bottom: 20px;
  margin-top: 20px;
}

.grey-button, .grey-button:active, .grey-button:focus {
  margin-left: auto;
  margin-right: auto;
  display: table;
  background-color: transparent;
}

/* HISTORY */

/*Confirm*/
.list-group-no-border {
  border-left:none;
  border-right:none;
}

.list-group-notification {
  padding: .75rem;
  border-left: none;
  border-right: none;
  display: table;
  min-width: 100%;
}

.list-group-notification:first-child, .list-group-no-border:first-child {
  border-top: none;
}

.list-group-notification:last-child, .list-group-no-border:last-child {
  border-bottom: none;
}

.notification-unread {
  background-color: #fcf8e3;
  border-color: #faf2cc;
}

.tag-align {
  display: table-cell;
  vertical-align: middle;
  width: 0;
}

.tag-custom {
  margin-right: .75rem;
  padding: .7em;
  border-radius: 100%;
}

.icon-homepage{
  position: relative;
}

.notification-badge[data-badge]:after, .addremove-badge {
  position:absolute;
  border-radius: 50%;
  text-align: center;
  font-family: 'proxima-nova', serif;
}

.notification-badge[data-badge]:after {
  content:attr(data-badge);
  color: #fff;
  background-color: #27aae1;
  font-size: .7rem;
  right: -8px; bottom: -8px;
  line-height: 20px; width: 20px; height: 20px;
}

.addremove-badge {
  color: #8a6d3b;
  background-color: #fcf8e3;
  font-size: 1rem;
  border: 1px solid #faf2cc;
  cursor: pointer;
  right: 6px; top: -6px;
  line-height: 18px; /*bad, just to align the minus sign into the circle, should be 24px*/
  width: 24px; height: 24px;
  display: none;
}

.card-side-container .addremove-badge{
  line-height: 22px;
  right: -6px; top: -6px;
}

.display-badge {
  display: inline !important;
}

.col-nopadding-left .addremove-badge, .col-nopadding .addremove-badge {
  right: -1px;
}

.toggle-link {
  pointer-events: none;
  cursor: default;
}

